--- a/css/style.css
+++ b/css/style.css
@@ -370,3 +370,89 @@ height: 45px;
 	text-align: center;
 }
 
+.img-normalizada{
+	width:250px;
+	height:250px;
+	object-fit:cover;
+	}
+
+#sample{
+	color: rgba(255,255,255,1.00);
+	text-align: center;
+		
+}
+
+#sample{
+	padding: 40px;
+	background-color: rgba(0,0,0,1.00);
+	text-align: center;
+	align-content: center
+}
+
+.trabajo-estudiantes{
+	padding: 30px;
+}
+
+.trabajo-estudiantes h3{
+	padding: 40px;
+}
+
+#banner_curso{
+	color: #fff!important;
+	background: url("../img/curso_banner.jpg");
+	background-position: center;
+	background-size: cover;
+	padding: 20% 0;
+	mix-blend-mode: multiply;
+	box-shadow: inset 0 0 0 2000px rgba(0,7,8,0.60);
+}
+
+#banner_curso h1{
+	text-align: center;
+}
+.card{
+	width: 18rem;
+	
+}
+
+.card-img-top{
+	width: 17.875rem;
+	height:13.438rem ;
+}
+
+
+
+.obras .col{
+	padding-bottom: 40px;
+
+}
+
+.siguiente-pagina{
+	text-align: center;
+}
+
+.siguiente-pagina{
+	text-align: center;
+}
+
+.img-normalizada{
+	width:250px;
+	height:250px;
+	object-fit:cover;
+	}
+
+#banner-artista{
+	color: #fff!important;
+	background: url("../img/lost in the stars.jpeg");
+	background-position: center;
+	background-size: cover;
+	padding: 20% 0;
+	mix-blend-mode: multiply;
+	box-shadow: inset 0 0 0 2000px rgba(0,7,8,0.60);
+		
+}
+#banner-artista h1{
+	font-family: 'Cinzel', serif;
+	text-align: center;
+	color: #FFFDFD;
+}
